app_launcher: Prevent empty folders in app list.

Fix issue when in some cases (usually reproducible on next user login)
folders are rendered blank.

Test: Locally
Bug: 838750
Change-Id: I9249204c9416ad4a27d1754c308ffb5aa5a85453
Reviewed-on: https://chromium-review.googlesource.com/1045518
Commit-Queue: Yury Khmel <khmel@google.com>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556260}
Former-commit-id: 65c26bd27a6315ed72e179b8a338f35572cf440c